k8s/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiibase
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      environment: develop
  template:
    metadata:
      labels:
        app: frontend
        environment: develop
    spec:
      containers:
        - name: kiibase
          image: FIXME
          ports:
            - containerPort: 3000
