k8s/frontend.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kiibase
  labels:
    app: frontend
    environment: develop
spec:
  containers:
    - name: kiibase
      image: FIXME
      ports:
        - containerPort: 3000
