k8s/frontend.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
    environment: develop
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 32710
  selector:
    app: frontend
    environment: develop
