k8s/frontend.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    # nginx.ingress.kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    #   if ($http_x_forwarded_proto = 'http') {
    #     return 301 https://$host$request_uri;
    #   }
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
          # - path: /django
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: django-service
          #       port:
          #         number: 80
